--- a/templates/include/org_list.html
+++ b/templates/include/org_list.html
@@ -1,5 +1,5 @@
-<li class="li_org">
-	<input id="datalist_org" type="text" name="exh_org" list="orgs" placeholder="Organization">
+<li class="li_org mb-1">
+	<input id="datalist_org" type="text" name="exh_org" list="orgs" placeholder="Organization Name" class="form-control">
 		<datalist id="orgs">
 			{% for org in orgs %}
 			<option data-value="{{ org.id }}" value="{{ org.name }}"></option>
