--- a/templates/create.html
+++ b/templates/create.html
@@ -99,7 +99,7 @@
 						<div class="col-md-6">
 							<button type="button" id="createModal_art" class="art_create btn__parks mb-3" data-toggle="modal" data-target="#modal_art">Create</button>
 							<button id="add_art" type="button" class="btn__parks btn__parks--edit art_add">+</button>
-							<ul class="ul_art form-inline">
+							<ul class="ul_art">
 								{% include "include/art_list.html" ignore missing with context %}
 							</ul>
 						</div>
