--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -16,15 +16,17 @@
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8">
 					{% if exhibitions %}
-					{% for x in exhibitions %}
-						<h2 class="text-center display-4 p-4"><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h2>
-						<ul>
-							<li>ID: {{ x.id }}</li>
-							<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
-							<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
-							<li>De-Install Due Date: {{ x.deinstallDate }}</li>
-						</ul>
-					{% endfor %}
+						{% for x in exhibitions %}
+							<h2 class="text-center display-4 p-4"><a href="{{ url_for('exhibition', exhibition_id=x.id) }}">{{ x.name }}</a></h2>
+							<ul>
+								<li>ID: {{ x.id }}</li>
+								<li>Exhibition Dates: {{ x.startDate }} to {{ x.endDate }}</li>
+								<li>Install Date(s): {{ x.installStart }}{%if x.installEnd %} to {{ x.installEnd }}{% endif %}</li>
+								<li>De-Install Due Date: {{ x.deinstallDate }}</li>
+							</ul>
+						{% endfor %}
+					{% else %}
+						<p><i>There are no exhibitions in the database yet.</i></p>
 					{% endif %}
 				</div>
 			</div>
