--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -17,7 +17,7 @@
 				<div class="col-sm-12 col-md-8">
 					{% if artists %}
 						{% for a in artists %}
-							<h2 class="text-center display-4 p-4"><a href="{{ url_for('artist', artist_id=a.id) }}">{% if a.fName %}{{ a.fName }} {% endif %}{{ a.pName }}</a></h2>
+							<h2 class="text-center display-4 p-4"><a href="{{ url_for('artist', artist_id=a.id) }}">{{ a.full_name }}</a></h2>
 							<ul>
 								<li>ID: {{ a.id }}</li>
 								<li>Email: {{ a.email }}</li>
